src/objects/Ce_Audit__c.object
<CustomObject>
    <description>Ce Audit</description>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Applicant</description>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ce Audits</relationshipLabel>
        <relationshipName>Ce_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Completed_Date__c</fullName>
        <description>Audit Completed Date</description>
        <label>Audit Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Start_Date__c</fullName>
        <description>Audit Start Date</description>
        <label>Audit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Crendential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Crendential being audited</description>
        <label>Crendential</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Ce Audits</relationshipLabel>
        <relationshipName>Ce_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Audit</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Renewal_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Credential__c</fullName>
        <description>Type of credential</description>
        <formula>TEXT(Crendential__r.Credential__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Credential</label>
        <type>Text</type>
    </fields>
    <label>Ce Audit</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Ce Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ce Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>